# models/menu_model.go
@@ -2,11 +2,11 @@ package models
 
 import "Blog_server/models/enum"
 
-// MenuModel 菜单表
+// MenuModel 菜单表   路径可以是 /path  也可以是  路由别名
 type MenuModel struct {
 	Model
-	MenuTitle    string        `gorm:"size:32" json:"menu_title"`
-	MenuTitleEn  string        `gorm:"size:32" json:"menu_title_en"`
+	Title        string        `gorm:"size:32" json:"title"`
+	Path         string        `gorm:"size:32" json:"path"`
 	Slogan       string        `gorm:"size:64" json:"slogan"`                                                                     // slogan
 	Abstract     enum.Array    `gorm:"type:string" json:"abstract"`                                                               // 简介
 	AbstractTime int           `json:"abstract_time"`                                                                             // 简介的切换时间
